<resources>

    <!-- Generales -->
    <string name="app_name">Seamos Mejores Maestros</string>
    <string name="nameAddPublicador">Añadir Publicador</string>
    <string name="nameSala1">Primera Sala</string>
    <string name="nameSala2">Segunda Sala</string>
    <string name="nameEditar">Editar</string>
    <string name="tab_text_1">Inicio</string>
    <string name="tab_text_2">Asignaciones</string>
    <string name="tab_text_3">Publicadores</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_share">Enviar recordatorios</string>

    <!-- Add Publicador -->
    <string name="NombrePub">*Nombres: </string>
    <string name="editDatos">Escribir</string>
    <string name="ApellidoPub">*Apellidos: </string>
    <string name="TelefonoPub">Telefono: </string>
    <string name="EmailPub">Correo: </string>
    <string name="GenMasculino">*Hombre</string>
    <string name="GenFemenino">*Mujer</string>
    <string name="asterisco">*Campos obligatorios</string>
    <string name="btnAgregar">Agregar</string>
    <string name="btnCancelar">Cancelar</string>

    <!-- Add Salas -->
    <string name="checkboxVisita">Visita Superintendente</string>
    <string name="checkboxAsamblea">Asamblea</string>
    <string name="tvLectura">Lectura Bíblica: </string>
    <string name="tvAsignacion1">Primera Asignación: </string>
    <string name="tvAsignacion2">Segunda Asignación: </string>
    <string name="tvAsignacion3">Tercera Asignación: </string>
    <string name="checkboxVideo">Video</string>
    <string name="tvEncargado">Encargado</string>
    <string name="tvAyudante">Ayudante</string>
    <string name="btnGuardar">Guardar</string>
    <string name="Publicador">Publicador</string>

    <!-- Inicio Fragment -->
    <string name="tituloInicio">Última fecha programada: </string>
    <string name="fechaInicio">Fecha</string>
    <string name="titleSala1">Sala 1: </string>
    <string name="titleSala2">Sala 2: </string>
    <string name="titleAsamblea">Fecha de próxima Asamblea: </string>
    <string name="titleVisita">Fecha de próxima Visita: </string>
    <string name="eventos">Evento</string>
    <string name="tituloCronometro">Temporizador</string>
    <string name="tituloDuracion">Duración: </string>
    <string name="tiempoMM">00</string>
    <string name="tiempo">:</string>
    <string name="tiemposs">00</string>
    <string name="visorTemp">00:00</string>


    <!-- Asignaciones Fragment -->
    <string name="tituloAsignaciones">Fecha: </string>
    <string name="aviso">Sin asignaciones programadas en esta semana</string>

    <!-- Activity Editar Pub -->
    <string name="tituloFecha">Fecha</string>
    <string name="cbHabilitar">Inhabilitar</string>

    <!-- Activity Sustitucion -->
    <string name="nameSust">Sustitución</string>
    <string name="sustituir">Sustituir por: </string>

    <!-- Activity Seleccionar -->
    <string name="selecFecha">Seleccione el día de las Asignaciones</string>
    <string name="btnAsignar">IR</string>

    <!-- Publicadores Fragmente -->
    <string name="Buscar">Buscar: </string>
    <string name="menuEditar">Editar</string>
    <string name="menuEliminar">Eliminar</string>

    <!-- Ver Activity -->
    <string name="nameVer">Detalles</string>
    <string name="ultDiscurso">Último Discurso: </string>
    <string name="ultAyudante">Último Ayudante: </string>
    <string name="ultSustitucion">Última Sustitución: </string>


    <!-- FloatingMenu-->
    <string name="fabSala1">Programar Sala 1</string>
    <string name="fabSala2">Programar Sala 2</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
