<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nombrePub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NombrePub"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/apellidoPub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/ApellidoPub"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/ultFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ultDiscurso"
            android:textSize="18sp"
            android:textStyle="italic"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>